# quote0-client

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
src/quote0_client/: __init__.py  models.py
tests/: test_client.py  test_real_api.py
