[project]
name = "quote0-client"
version = "0.1.0"
description = "Python SDK for Quote0 e-ink device API"
readme = "README.md"
authors = [
    { name = "YetYeti" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
keywords = ["quote0", "e-ink", "api", "sdk", "iot", "device"]
urls = { "Homepage" = "https://github.com/YetYeti/quote0-client", "Repository" = "https://github.com/YetYeti/quote0-client", "Issues" = "https://github.com/YetYeti/quote0-client/issues" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quote0_client"]
